# bksports

./: .gitignore  README.md  main.py  pyproject.toml
src/: constants.py  main.py
src/bksports/: constants.py  main.py
src/bksports/bowling/: ball.py  conversions.py  game.py  pin.py  trajectory.py
src/bowling/: ball.py  conversions.py  game.py  pin.py  score_keeper.py  trajectory.py
src/sports/: __main__.py  main.py
src/sports/bowling/: ball.py  conversions.py  game.py  pin.py  trajectory.py
tutorials/fcc_pygame_tutorial/: main.py
